--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -54,6 +54,9 @@
         }
     },
     "view": {
+        "policies": {
+            "Title": "Polítiques de privacitat"
+        },
         "cookiesMessage": {
             "Title": "Avís de cookies",
             "Message": "Aquest lloc web fa servir cookies per tal de funcionar i poder proporcionar el millor servei. També les fem servir per recolectar estadístiques, pots deshabilitar-les si ho prefereixes.",
