--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -55,7 +55,19 @@
     },
     "view": {
         "policies": {
-            "Title": "Polítiques de privacitat"
+            "Title": "Polítiques de privacitat",
+            "sections": {
+                "provided-info": {
+                    "Title": "Informació que ens porporciones",
+                    "P-1": "Per utilitzar alguns dels nostres productes i serveis, cal que tingueu un compte, i per crear-ne un, ens heu de proporcionar certa informació. De la mateixa manera, si utilitzeu els nostres productes i serveis de pagament, no us els podem proporcionar sense obtenir informació de pagament. Bàsicament, certa informació és necessària si voleu utilitzar molts dels nostres productes i serveis.",
+                    "li": {
+                        "1": {
+                            "Label": "Comptes personals",
+                            "Text": "Si creeu un compte, haureu de proporcionar-nos alguna informació perquè puguem oferir-vos els nostres serveis. Això inclou un nom de visualització; un nom d'usuari (per exemple, @RoxieHart); una contrasenya; una adreça de correu electrònic o un número de telèfon; una data de naixement; el vostre idioma de visualització; i informació d'inici de sessió únic de tercers (si trieu aquest mètode d'inici de sessió). També podeu optar per compartir la vostra ubicació al vostre perfil i als tuits, i penjar la vostra llibreta d'adreces a Twitter per ajudar a trobar persones que potser coneixeu. La informació del vostre perfil, que inclou el vostre nom de visualització i nom d'usuari, sempre és pública, però podeu utilitzar el vostre nom real o un pseudònim. I recordeu que podeu crear diversos comptes de Twitter, per exemple, per expressar diferents parts de la vostra identitat, professional o no."
+                        }
+                    }
+                }
+            }
         },
         "cookiesMessage": {
             "Title": "Avís de cookies",
