--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -70,6 +70,20 @@
                             "Text": "Per comprar haureu de proporcionar-nos informació de pagament, inclòs el vostre número de targeta de crèdit o dèbit, la data de caducitat de la targeta, el codi CVV i l'adreça de facturació. Aquestes dades mai s'emmagatzemen sense xifrar i no són accesibles pel personal de Plugandwork."
                         }
                     }
+                },
+                "use-of-info": {
+                    "Title": "Ús de la informació proporcionada",
+                    "P-1": "Quan utilitzeu els nostres serveis, recopilem informació sobre com feu servir els nostres serveis i generar estadístiques. Utilitzem aquesta informació per oferir-vos productes i serveis, per ajudar a mantenir Plugandwork més segur i respectuós per a tothom, i més rellevant per a vosaltres. Informació que recollim:",
+                    "li": {
+                        "1": {
+                            "Label": "Tecnologia",
+                            "Text": "Recopilem la versió del sistema operatiu, el model del telèfon, les característiques diferenciadores del dispositiu, l'idioma del sistema, la ubicació i informació demogràfica. Això ens permet prendre decisions com per exemple, amb quins dispositius hem de fer proves, etc."
+                        },
+                        "2": {
+                            "Label": "Direcció IP",
+                            "Text": "Per motius de seguretat, algunes accions com per exemple els inicis de sessió emmagatzemen la direcció IP per tal de poder conèixer qui realitza aquestes accions."
+                        }
+                    }
                 }
             }
         },
