Base route and menu

--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -50,6 +50,9 @@
             },
             "contactForm": {
                 "Title": "Formulari de contacte"
+            },
+            "roles": {
+                "Title": "Administrar rols"
             }
         }
     },
