--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -295,7 +295,8 @@
                     "SureToDelete": "Segur que vols esborrar l'usuari?",
                     "SureToRecover": "Segur que vols restaurar l'usuari?",
                     "SureToBan": "Segur que vols bloquejar l'usuari?",
-                    "SureToUnban": "Segur que vols desbloquejar l'usuari?"
+                    "SureToUnban": "Segur que vols desbloquejar l'usuari?",
+                    "EditRoles": "Editar rols"
                 }
             }
         },
