--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -527,6 +527,10 @@
             "406": {
                 "Title": "Error de format",
                 "Message": "El servidor informa de que el format de les dades no és correcte"
+            },
+            "403": {
+                "Title": "Petició no autoritzada",
+                "Message": "Prova a recarregar la pàgina i torna-ho a intentar"
             }
         }
     },
