--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -53,6 +53,9 @@
             },
             "roles": {
                 "Title": "Administrar rols"
+            },
+            "aboutUs": {
+                "Title": "Sobre nosaltres"
             }
         }
     },
