--- a/app/src/i18n/locales/ca.json
+++ b/app/src/i18n/locales/ca.json
@@ -63,6 +63,9 @@
         }
     },
     "view": {
+        "products": {
+            "Title": "Productes disponibles"
+        },
         "aboutUs": {
             "service": {
                 "Title": "Què oferim?",
